# ensc-core

./: .gitignore  .travis.yml  LICENSE  README
data/: README
scripts/: addmake.pl
src/: .gitignore  Makefile  Makefile.am  Makefile.am.common  Makefile_orig  autogen.sh  configure.ac  runconfig
src/Compara/: Makefile.am
src/Compara/DataAdaptors/: BaseComparaAdaptor.c  BaseComparaAdaptor.h  ComparaAdaptorTypes.h  ComparaDBAdaptor.c  ComparaDBAdaptor.h  ComparaDNAAlignFeatureAdaptor.c  ComparaDNAAlignFeatureAdaptor.h  DNAFragAdaptor.c  DNAFragAdaptor.h  GenomeDBAdaptor.c  GenomeDBAdaptor.h  GenomicAlignAdaptor.c  GenomicAlignAdaptor.h  HomologyAdaptor.c  HomologyAdaptor.h  Makefile.am  SyntenyAdaptor.c  SyntenyAdaptor.h  SyntenyRegionAdaptor.c  SyntenyRegionAdaptor.h
src/Compara/DataModel/: ComparaDataModelTypes.h  DNAFrag.c  DNAFrag.h  GenomeDB.c  GenomeDB.h  GenomicAlign.c  GenomicAlign.h  Homology.c  Homology.h  Makefile.am  SyntenyRegion.c  SyntenyRegion.h
src/DataAdaptors/: AdaptorTypes.h  AnalysisAdaptor.c  AnalysisAdaptor.h  AssemblyMapperAdaptor.c  AssemblyMapperAdaptor.h  AttributeAdaptor.c  AttributeAdaptor.h  BaseAdaptor.c  BaseAdaptor.h  BaseAlignFeatureAdaptor.c  BaseAlignFeatureAdaptor.h  BaseDBAdaptor.h  BaseFeatureAdaptor.c  BaseFeatureAdaptor.h  CachingSequenceAdaptor.c  CachingSequenceAdaptor.h  ChromosomeAdaptor.c  ChromosomeAdaptor.h  CloneAdaptor.c  CloneAdaptor.h  CoordSystemAdaptor.c  CoordSystemAdaptor.h  DBAdaptor.c  DBAdaptor.h  DBConnection.c  DBConnection.h  DBEntryAdaptor.c  DBEntryAdaptor.h  DNAAlignFeatureAdaptor.c  DNAAlignFeatureAdaptor.h  ExonAdaptor.c  ExonAdaptor.h  GeneAdaptor.c  GeneAdaptor.h  IntronSupportingEvidenceAdaptor.c  IntronSupportingEvidenceAdaptor.h  Makefile.am  MetaContainer.c  MetaContainer.h  MetaCoordContainer.c  (+36 more)
src/DataModel/: Analysis.c  Analysis.h  AnnotatedSeqFeature.c  AnnotatedSeqFeature.h  AssemblyMapper.c  AssemblyMapper.h  Attribute.c  Attribute.h  BaseAlignFeature.c  BaseAlignFeature.h  BaseAssemblyMapper.c  BaseAssemblyMapper.h  BaseContig.c  BaseContig.h  ChainedAssemblyMapper.c  ChainedAssemblyMapper.h  Chromosome.c  Chromosome.h  CigarStrUtil.c  CigarStrUtil.h  Class.c  Class.h  Clone.c  Clone.h  CoordSystem.c  CoordSystem.h  DBEntry.c  DBEntry.h  DNAAlignFeature.c  DNAAlignFeature.h  DNAPepAlignFeature.c  DNAPepAlignFeature.h  DataModelTypes.h  EnsC.c  EnsC.h  EnsRoot.h  Exon.c  Exon.h  FeaturePair.c  FeaturePair.h  (+58 more)
src/DataModel/Basic/: IDHash.c  IDHash.h  Makefile.am  Set.c  Set.h  Vector.c  Vector.h
src/DataModel/Mapper/: CoordPair.c  CoordPair.h  IndelCoordinate.c  IndelCoordinate.h  Makefile.am  MapperCoordinate.c  MapperCoordinate.h  MapperGap.c  MapperGap.h  MapperPair.c  MapperPair.h  MapperPairSet.c  MapperPairSet.h  MapperRange.h  MapperRangeSet.c  MapperRangeSet.h  MapperUnit.c  MapperUnit.h  RangeRegistry.c  RangeRegistry.h
src/OBDA/: BioIndex.c  BioIndex.h  Makefile.am  parsers.c  parsers.h
src/Programs/: Makefile.am  RefineSolexaGenes.c  RefineSolexaGenes.h  bamcount.c  bamcount_exon.c  bamcov.c  bamhelper.h  bammap.c  compile.csh  countsnps.c  countsnps.pl  dumptranslations.pl  fastasplit.c  indicate.c  moveperl.c  testdbc.c  translate_main.c
src/Tests/: AssemblyMapperTest.c  BaseComparaDBTest.h  BaseRODBTest.h  BaseRWDBTest.h  BaseTest.h  CacheTest.c  ChainedAssemblyMapperTest.c  CigarStrUtilTest.c  ClassTest.c  Compara.conf  ComparaDBAdaptorTest.c  ComparaDNAAlignFeatureAdaptorTest.c  CoordSystemTest.c  DBAdaptorTest.c  DNAAlignFeatureTest.c  DNAAlignFeatureWriteTest.c  DNAPepAlignFeatureTest.c  DNAPepAlignFeatureWriteTest.c  EcoStringTest.c  EnsCTestDB.c  FreeTest.c  GeneTest.c  GeneWriteTest.c  GenomicAlignTest.c  HomologyTest.c  LRUCacheTest.c  Makefile.am  MapperTest.c  PredictionTranscriptTest.c  RepeatFeatureTest.c  RepeatFeatureWriteTest.c  SeqUtilTest.c  SequenceAdaptorTest.c  SimpleFeatureTest.c  SimpleFeatureWriteTest.c  SliceAdaptorTest.c  StrUtilTest.c  StreamTest.c  SyntenyTest.c  TopLevelAssemblyMapperTest.c  (+2 more)
src/Util/: CHash.c  CHash.h  Cache.c  Cache.h  EcoString.c  EcoString.h  EnsC.c  EnsC.h  Error.c  Error.h  FileUtil.c  FileUtil.h  IDHash.c  IDHash.h  LRUCache.c  LRUCache.h  Makefile.am  Message.h  MysqlUtil.c  MysqlUtil.h  ProcUtil.c  ProcUtil.h  SeqUtil.c  SeqUtil.h  StrUtil.c  StrUtil.h  Stream.c  Stream.h  StringHash.c  StringHash.h  tplib.h  translate.c  translate.h
