
include $(top_srcdir)/Makefile.am.common

SUBDIRS = .

noinst_LTLIBRARIES = libDataAdaptors.la

include_HEADERS = \
AdaptorTypes.h \
AnalysisAdaptor.h \
AssemblyMapperAdaptor.h \
AttributeAdaptor.h \
BaseAdaptor.h \
BaseDBAdaptor.h \
BaseFeatureAdaptor.h \
CachingSequenceAdaptor.h \
ChromosomeAdaptor.h \
CloneAdaptor.h \
CoordSystemAdaptor.h \
DBAdaptor.h \
DBConnection.h \
DBEntryAdaptor.h \
DNAAlignFeatureAdaptor.h \
ExonAdaptor.h \
GeneAdaptor.h \
IntronSupportingEvidenceAdaptor.h \
MetaContainer.h \
MetaCoordContainer.h \
MysqlResultRow.h \
MysqlStatementHandle.h \
PredictionExonAdaptor.h \
PredictionTranscriptAdaptor.h \
ProteinAlignFeatureAdaptor.h \
RawContigAdaptor.h \
RepeatConsensusAdaptor.h \
RepeatFeatureAdaptor.h \
ResultRow.h \
SeqRegionCacheEntry.h \
SequenceAdaptor.h \
SimpleFeatureAdaptor.h \
SliceAdaptor.h \
StatementHandle.h \
SupportingFeatureAdaptor.h \
TranscriptAdaptor.h \
TranscriptSupportingFeatureAdaptor.h \
TranslationAdaptor.h \
$(NULL)

libDataAdaptors_la_SOURCES = \
AnalysisAdaptor.c \
AssemblyMapperAdaptor.c \
AttributeAdaptor.c \
BaseAdaptor.c \
BaseFeatureAdaptor.c \
CachingSequenceAdaptor.c \
ChromosomeAdaptor.c \
CloneAdaptor.c \
CoordSystemAdaptor.c \
DBAdaptor.c \
DBConnection.c \
DBEntryAdaptor.c \
DNAAlignFeatureAdaptor.c \
ExonAdaptor.c \
GeneAdaptor.c \
IntronSupportingEvidenceAdaptor.c \
MetaContainer.c \
MetaCoordContainer.c \
MysqlResultRow.c \
MysqlStatementHandle.c \
PredictionExonAdaptor.c \
PredictionTranscriptAdaptor.c \
ProteinAlignFeatureAdaptor.c \
RawContigAdaptor.c \
RepeatConsensusAdaptor.c \
RepeatFeatureAdaptor.c \
SeqRegionCacheEntry.c \
SequenceAdaptor.c \
SimpleFeatureAdaptor.c \
SliceAdaptor.c \
SupportingFeatureAdaptor.c \
TranscriptAdaptor.c \
TranscriptSupportingFeatureAdaptor.c \
TranslationAdaptor.c \
$(NULL)


# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/DataAdaptors/Makefile.in

