
include $(top_srcdir)/Makefile.am.common

SUBDIRS = .

noinst_LTLIBRARIES = libDataModelBasic.la

include_HEADERS = \
Vector.h
$(NULL)

libDataModelBasic_la_SOURCES = \
Vector.c
$(NULL)


# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/DataModel/Basic/Makefile.in

